# sgl

./: .gitignore  CMakeLists.txt  README.md
include/: sgl.h  sgl_alloc.h  sgl_buttons.h  sgl_gui.h  sgl_linalg.h  sgl_mesh.h  sgl_path.h  sgl_shader.h  sgl_texture.h  sgl_types.h
src/: sgl.c  sgl_alloc.c  sgl_gui.c  sgl_gui_internal.h  sgl_linalg.c  sgl_mesh.c  sgl_path.c  sgl_platform.c  sgl_shader.c  sgl_stb.c  sgl_texture.c
src/apple/: sgl_path.c
src/linux/: sgl_path.c
src/win32/: sgl_fopen.c  sgl_path.c  sgl_utf8.c  sgl_utf8.h
